# vfs-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  result.rs
src/android/: filesystem.rs
src/zip/: cp437.rs  deflate.rs  mod.rs  plaintext.rs  result.rs  spec.rs  zip_archive.rs  zip_file.rs
