[package]
name = "vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.5.0" }
thiserror = { version = "1.0.50" }
parking_lot = { version = "0.12.1" }
flate2 = { version = "1.0.28" }